deploy-sourcegraph/nine-overlay/apps_v1_deployment_codeintel-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Postgres database for various data.
    kubectl.kubernetes.io/default-container: pgsql
  labels:
    app.kubernetes.io/component: codeintel-db
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: codeintel-db
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: codeintel-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: codeintel-db
        deploy: sourcegraph
        group: backend
    spec:
      containers:
      - image: index.docker.io/sourcegraph/codeintel-db:insiders@sha256:10c4b76fc91f4f6391e806122e9d7b0e5e0dd0114ec031ff19b45093101d139e
        livenessProbe:
          exec:
            command:
            - /liveness.sh
          initialDelaySeconds: 15
        name: pgsql
        ports:
        - containerPort: 5432
          name: pgsql
        readinessProbe:
          exec:
            command:
            - /ready.sh
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /data
          name: disk
        - mountPath: /conf
          name: pgsql-conf
      - env:
        - name: DATA_SOURCE_NAME
          value: postgres://sg:@localhost:5432/?sslmode=disable
        - name: PG_EXPORTER_EXTEND_QUERY_PATH
          value: /config/code_intel_queries.yaml
        image: index.docker.io/sourcegraph/postgres_exporter:insiders@sha256:196f8fed5bb69649e98997af2d412af1322cf461c67977bc112eba5f08613e0b
        name: pgsql-exporter
        terminationMessagePolicy: FallbackToLogsOnError
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 120
      volumes:
      - name: disk
        persistentVolumeClaim:
          claimName: codeintel-db
      - configMap:
          defaultMode: 511
          name: codeintel-db-conf
        name: pgsql-conf
