deploy-sourcegraph/nine-overlay/apps_v1_deployment_github-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Rate-limiting proxy for the GitHub API.
    kubectl.kubernetes.io/default-container: github-proxy
  labels:
    app.kubernetes.io/component: github-proxy
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: github-proxy
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: github-proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: github-proxy
        deploy: sourcegraph
    spec:
      containers:
      - image: index.docker.io/sourcegraph/github-proxy:insiders@sha256:c0f705311aa2e863e5f315c98e215fb25d418082b25cfbd04efc8d19f40a300c
        name: github-proxy
        ports:
        - containerPort: 3180
          name: http
        resources:
          limits:
            cpu: "1"
            memory: 1G
          requests:
            cpu: 100m
            memory: 250M
        terminationMessagePolicy: FallbackToLogsOnError
      - args:
        - --reporter.grpc.host-port=jaeger-collector:14250
        - --reporter.type=grpc
        image: index.docker.io/sourcegraph/jaeger-agent:insiders@sha256:fd0f2b8c8cff265ecacecf6c8b0e2a1b0fbf493da3dba20df9ba9ad822b774eb
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        resources:
          limits:
            cpu: "1"
            memory: 500M
          requests:
            cpu: 100m
            memory: 100M
      securityContext:
        runAsUser: 0
