deploy-sourcegraph/nine-overlay/apps_v1_deployment_jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger
    app.kubernetes.io/component: jaeger
    app.kubernetes.io/name: jaeger
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
      app.kubernetes.io/component: all-in-one
      app.kubernetes.io/name: jaeger
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/port: "16686"
        prometheus.io/scrape: "true"
      labels:
        app: jaeger
        app.kubernetes.io/component: all-in-one
        app.kubernetes.io/name: jaeger
        deploy: sourcegraph
    spec:
      containers:
      - args:
        - --memory.max-traces=20000
        image: index.docker.io/sourcegraph/jaeger-all-in-one:insiders@sha256:583dc27a41bd360c23b23d938360cbb30c8d4163adf9ae040b5e84b716bbde8e
        name: jaeger
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        - containerPort: 16686
          protocol: TCP
        - containerPort: 14250
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 14269
          initialDelaySeconds: 5
      securityContext:
        runAsUser: 0
