deploy-sourcegraph/nine-overlay/apps_v1_deployment_minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: MinIO for storing LSIF uploads.
    kubectl.kubernetes.io/default-container: minio
  labels:
    app.kubernetes.io/component: minio
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: minio
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
        deploy: sourcegraph
    spec:
      containers:
      - args:
        - minio
        - server
        - /data
        image: index.docker.io/sourcegraph/minio:insiders@sha256:0daf4c0c821634eeefbf90f48d467eece09597aff5d9f582685c8c875f03e6fa
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: minio
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 5
        name: minio
        ports:
        - containerPort: 9000
          name: minio
        readinessProbe:
          httpGet:
            path: /minio/health/live
            port: minio
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 5
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /data
          name: minio-data
      securityContext:
        runAsUser: 0
      volumes:
      - name: minio-data
        persistentVolumeClaim:
          claimName: minio
