deploy-sourcegraph/nine-overlay/apps_v1_deployment_pgsql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Postgres database for various data.
    kubectl.kubernetes.io/default-container: pgsql
  labels:
    app.kubernetes.io/component: pgsql
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: pgsql
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pgsql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pgsql
        deploy: sourcegraph
        group: backend
    spec:
      containers:
      - env: null
        image: index.docker.io/sourcegraph/postgres-12-alpine:135107_2022-03-03_9498a8bd3366@sha256:e26b159dc7c0c47d136886390c899816e669a3c2c1ead689bdad0b610364e45e
        livenessProbe:
          exec:
            command:
            - /liveness.sh
          initialDelaySeconds: 15
        name: pgsql
        ports:
        - containerPort: 5432
          name: pgsql
        readinessProbe:
          exec:
            command:
            - /ready.sh
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /data
          name: disk
        - mountPath: /conf
          name: pgsql-conf
        - mountPath: /dev/shm
          name: dshm
      - env:
        - name: DATA_SOURCE_NAME
          value: postgres://sg:@localhost:5432/?sslmode=disable
        - name: PG_EXPORTER_EXTEND_QUERY_PATH
          value: /config/queries.yaml
        image: index.docker.io/sourcegraph/postgres_exporter:insiders@sha256:196f8fed5bb69649e98997af2d412af1322cf461c67977bc112eba5f08613e0b
        name: pgsql-exporter

        terminationMessagePolicy: FallbackToLogsOnError
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 120
      volumes:
      - name: disk
        persistentVolumeClaim:
          claimName: pgsql
      - configMap:
          defaultMode: 511
          name: pgsql-conf
        name: pgsql-conf
      - emptyDir:
          medium: Memory
          sizeLimit: 1G
        name: dshm
