deploy-sourcegraph/nine-overlay/apps_v1_deployment_precise-code-intel-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Handles conversion of uploaded precise code intelligence bundles.
  labels:
    app.kubernetes.io/component: precise-code-intel
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: precise-code-intel-worker
spec:
  minReadySeconds: 10
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: precise-code-intel-worker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: precise-code-intel-worker
        deploy: sourcegraph
    spec:
      containers:
      - env:
        - name: NUM_WORKERS
          value: "4"
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: index.docker.io/sourcegraph/precise-code-intel-worker:insiders@sha256:387282e51d0288ee7f5ed6f59b15c981f975c746166b6dcd7db2c300860ed3af
        livenessProbe:
          httpGet:
            path: /healthz
            port: debug
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 5
        name: precise-code-intel-worker
        ports:
        - containerPort: 3188
          name: http
        - containerPort: 6060
          name: debug
        readinessProbe:
          httpGet:
            path: /ready
            port: debug
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 5
        terminationMessagePolicy: FallbackToLogsOnError
      securityContext:
        runAsUser: 0
