deploy-sourcegraph/nine-overlay/apps_v1_deployment_repo-updater.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Handles repository metadata (not Git data) lookups and updates from
      external code hosts and other similar services.
    kubectl.kubernetes.io/default-container: repo-updater
  labels:
    app.kubernetes.io/component: repo-updater
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: repo-updater
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: repo-updater
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: repo-updater
        deploy: sourcegraph
    spec:
      containers:
      - env: null
        image: index.docker.io/sourcegraph/repo-updater:insiders@sha256:94526c4aef85f00903e0452ddbca556b371056667f0e85875392f5f4fd81de65
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: debug
            scheme: HTTP
          periodSeconds: 1
          timeoutSeconds: 5
        name: repo-updater
        ports:
        - containerPort: 3182
          name: http
        - containerPort: 6060
          name: debug
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: debug
            scheme: HTTP
          periodSeconds: 1
          timeoutSeconds: 5
        terminationMessagePolicy: FallbackToLogsOnError
      - args:
        - --reporter.grpc.host-port=jaeger-collector:14250
        - --reporter.type=grpc
        image: index.docker.io/sourcegraph/jaeger-agent:insiders@sha256:fd0f2b8c8cff265ecacecf6c8b0e2a1b0fbf493da3dba20df9ba9ad822b774eb
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
      securityContext:
        runAsUser: 0
