deploy-sourcegraph/nine-overlay/apps_v1_deployment_searcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Backend for text search operations.
    kubectl.kubernetes.io/default-container: searcher
  labels:
    app.kubernetes.io/component: searcher
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: searcher
spec:
  minReadySeconds: 10
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: searcher
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: searcher
        deploy: sourcegraph
    spec:
      containers:
      - env:
        - name: SEARCHER_CACHE_SIZE_MB
          valueFrom:
            resourceFieldRef:
              containerName: searcher
              divisor: 1M
              resource: requests.ephemeral-storage
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: CACHE_DIR
          value: /mnt/cache/$(POD_NAME)
        image: index.docker.io/sourcegraph/searcher:insiders@sha256:643f9e41eab845211028716bbc5f7724f1b2128d8ec511003f66b7eec9a54213
        name: searcher
        ports:
        - containerPort: 3181
          name: http
        - containerPort: 6060
          name: debug
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "2"
            ephemeral-storage: 26G
            memory: 2G
          requests:
            cpu: 500m
            ephemeral-storage: 25G
            memory: 500M
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /mnt/cache
          name: cache-ssd
      - args:
        - --reporter.grpc.host-port=jaeger-collector:14250
        - --reporter.type=grpc
        image: index.docker.io/sourcegraph/jaeger-agent:insiders@sha256:fd0f2b8c8cff265ecacecf6c8b0e2a1b0fbf493da3dba20df9ba9ad822b774eb
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        resources:
          limits:
            cpu: "1"
            memory: 500M
          requests:
            cpu: 100m
            memory: 100M
      securityContext:
        runAsUser: 0
      volumes:
      - emptyDir: {}
        name: cache-ssd
