deploy-sourcegraph/nine-overlay/apps_v1_deployment_symbols.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Backend for symbols operations.
    kubectl.kubernetes.io/default-container: symbols
  labels:
    app.kubernetes.io/component: symbols
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: symbols
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: symbols
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: symbols
        deploy: sourcegraph
    spec:
      containers:
      - env:
        - name: SYMBOLS_CACHE_SIZE_MB
          valueFrom:
            resourceFieldRef:
              containerName: symbols
              divisor: 1M
              resource: requests.ephemeral-storage
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: CACHE_DIR
          value: /mnt/cache/$(POD_NAME)
        image: index.docker.io/sourcegraph/symbols:insiders@sha256:d7f4281e09d18d94c926572e1986e56d3d727e427ab98d02d3e55e2c147a767e
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 5
        name: symbols
        ports:
        - containerPort: 3184
          name: http
        - containerPort: 6060
          name: debug
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 5
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /mnt/cache
          name: cache-ssd
      - args:
        - --reporter.grpc.host-port=jaeger-collector:14250
        - --reporter.type=grpc
        image: index.docker.io/sourcegraph/jaeger-agent:insiders@sha256:fd0f2b8c8cff265ecacecf6c8b0e2a1b0fbf493da3dba20df9ba9ad822b774eb
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
      securityContext:
        runAsUser: 0
      volumes:
      - emptyDir: {}
        name: cache-ssd
