deploy-sourcegraph/nine-overlay/apps_v1_deployment_syntect-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Backend for syntax highlighting operations.
  labels:
    app.kubernetes.io/component: syntect-server
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: syntect-server
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: syntect-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: syntect-server
        deploy: sourcegraph
    spec:
      containers:
      - env: null
        image: index.docker.io/sourcegraph/syntax-highlighter:insiders@sha256:cca119213d4c9d7e729745ee40f4c5b9489c20a2d800299c5976c4adb54a9e86
        livenessProbe:
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 5
        name: syntect-server
        ports:
        - containerPort: 9238
          name: http
        readinessProbe:
          tcpSocket:
            port: http
        terminationMessagePolicy: FallbackToLogsOnError
      securityContext:
        runAsUser: 0
