deploy-sourcegraph/nine-overlay/apps_v1_deployment_worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: Manages background processes.
  labels:
    app.kubernetes.io/component: worker
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: worker
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: worker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: worker
        deploy: sourcegraph
    spec:
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: index.docker.io/sourcegraph/worker:insiders@sha256:a61c8681dd45fc7a4e5650e65fd680a85650420a2bc7bd52c24b2c8ca60a84d2
        livenessProbe:
          httpGet:
            path: /healthz
            port: debug
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 5
        name: worker
        ports:
        - containerPort: 3189
          name: http
        - containerPort: 6060
          name: debug
        readinessProbe:
          httpGet:
            path: /ready
            port: debug
            scheme: HTTP
          periodSeconds: 5
          timeoutSeconds: 5
        terminationMessagePolicy: FallbackToLogsOnError
      securityContext:
        runAsUser: 0
