deploy-sourcegraph/nine-overlay/apps_v1_statefulset_gitserver.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    description: Stores clones of repositories to perform Git operations.
    kubectl.kubernetes.io/default-container: gitserver
  labels:
    app.kubernetes.io/component: gitserver
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: gitserver
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitserver
  serviceName: gitserver
  template:
    metadata:
      labels:
        app: gitserver
        deploy: sourcegraph
        group: backend
        type: gitserver
    spec:
      containers:
      - args:
        - run
        image: index.docker.io/sourcegraph/gitserver:insiders@sha256:b6b7d2ed410afff1a8fe6d119ef243b8456c3c9f0da6ee3187ae79003ce09bc7
        livenessProbe:
          initialDelaySeconds: 5
          tcpSocket:
            port: rpc
          timeoutSeconds: 5
        name: gitserver
        ports:
        - containerPort: 3178
          name: rpc
          protocol: TCP
        resources:
          limits:
            cpu: "4"
            memory: 8G
          requests:
            cpu: "4"
            memory: 8G
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /data/repos
          name: repos
      - args:
        - --reporter.grpc.host-port=jaeger-collector:14250
        - --reporter.type=grpc
        image: index.docker.io/sourcegraph/jaeger-agent:insiders@sha256:fd0f2b8c8cff265ecacecf6c8b0e2a1b0fbf493da3dba20df9ba9ad822b774eb
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        resources:
          limits:
            cpu: "1"
            memory: 500M
          requests:
            cpu: 100m
            memory: 100M
      securityContext:
        runAsUser: 0
      volumes:
      - name: repos
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: repos
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 200Gi
      storageClassName: sourcegraph
