deploy-sourcegraph/nine-overlay/apps_v1_statefulset_grafana.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    description: Metrics/monitoring dashboards and alerts.
    kubectl.kubernetes.io/default-container: grafana
  labels:
    app.kubernetes.io/component: grafana
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grafana
  serviceName: grafana
  template:
    metadata:
      labels:
        app: grafana
        deploy: sourcegraph
    spec:
      containers:
      - image: index.docker.io/sourcegraph/grafana:insiders@sha256:c0420c62412d96ff06592d9848e95e87fd1680f4b1a08cff35fbe825ef28fd1c
        name: grafana
        ports:
        - containerPort: 3370
          name: http
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-data
        - mountPath: /sg_config_grafana/provisioning/datasources
          name: config
      securityContext:
        runAsUser: 0
      serviceAccountName: grafana
      volumes:
      - configMap:
          defaultMode: 511
          name: grafana
        name: config
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: grafana-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: sourcegraph
